# retail-forecast

./: .gitignore  README.md  pyproject.toml
dataviz/: app.py
notebooks/: data-exploration.ipynb  data_exploration.ipynb  partie-2_preliminary_questions.ipynb  partie2_preliminary_questions.ipynb  partie3_multi-step_forecasting.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
retail_forecast/: evaluate.py  pipeline.py  predict.py  preprocessing.py  train.py
