[tool.poetry]
name = "retail-forecast"
version = "0.1.0"
description = ""
authors = ["bpugnaire <baptiste.pugnaire@gmail.com>"]
readme = "README.md"
packages = [{include = "retail_forecast"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
